examples/BAD/BAD_046_CONSISTENCY_2/main.nut
Data Address :-
    - string: type
    - string: name
    - uint: number

Data House :-
    - address: address
    - string: family_name

{}
